[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/MyFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/VideoSettingsScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="VideoSettingsScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0.121569, 0.435294, 0.882353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 312.0
margin_top = 132.0
margin_right = 648.0
margin_bottom = 408.0
custom_constants/separation = 60

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 336.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 336.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Video settings"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 336.0
margin_bottom = 276.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 26.0
margin_right = 309.0
margin_bottom = 152.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 283.0
margin_bottom = 48.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 283.0
margin_bottom = 48.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 21.0
margin_bottom = 48.0
rect_min_size = Vector2( 21, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 25.0
margin_right = 283.0
margin_bottom = 48.0
rect_min_size = Vector2( 129, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Set Fullscreen"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 52.0
margin_right = 283.0
margin_bottom = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_left = 36.0
margin_right = 247.0
margin_bottom = 48.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 21.0
margin_bottom = 48.0
rect_min_size = Vector2( 21, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 25.0
margin_right = 211.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Vsync : On"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 104.0
margin_right = 283.0
margin_bottom = 152.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_left = 64.0
margin_right = 218.0
margin_bottom = 48.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 21.0
margin_bottom = 48.0
rect_min_size = Vector2( 21, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 25.0
margin_right = 154.0
margin_bottom = 48.0
rect_min_size = Vector2( 129, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Back"
